[package]
name = "thorn"
version = "0.0.1"
edition = "2021"
authors = ["me <putnamjm.design@gmail.com>"]

[[bin]]
name = "mu-shell"
path = "src/shell/main.rs"

[[bin]]
name = "mu-server"
path = "src/server/main.rs"

[lib]
name = "mu"
path = "src/mu/lib.rs"
crate-type = ["lib"]
bench = false

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
cpu-time = "1.0.0"
crossbeam = "0.8"
futures = "0.3.28"
futures-locks = "0.7.1"
getopt = "1.1.3"
lazy_static = "1.4.0"
memmap = "0.7.0"
modular-bitfield = "0.11.2"
num_enum = "0.5.6"
oports = "1.0.0"
async-std = "1.12.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.4.0"
