[package]
name = "mu"
version = "0.0.1"
edition = "2021"
authors = ["me <putnamjm.design@gmail.com>"]

[lib]
name = "mu"
path = "./lib.rs"
crate-type = ["lib"]
bench = false

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
cpu-time = "1.0.0"
lazy_static = "1.4.0"
memmap = "0.7.0"
modular-bitfield = "0.11.2"
num_enum = "0.5.6"
futures = "0.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.4.0"
